--- a/catalogue-select.html
+++ b/catalogue-select.html
@@ -248,7 +248,7 @@
             <div class="container-xl">
                 <div class="row g-4">
                     <div class="col-md-3">
-                      <form action="./" method="get" autocomplete="off" novalidate class="sticky-top">
+                      <form action="pathway-confirmation.html" method="get" autocomplete="off" novalidate class="sticky-top">
                         <div class="form-label">Delivery Types</div>
                         <div class="mb-4">
                           <label class="form-check">
@@ -309,7 +309,7 @@
                         </div>
                         <div class="mt-5">
                           <button class="btn btn-primary w-100">
-                            Confirm changes
+                            Submit Selected Programmes
                           </button>
                           <a href="#" class="btn btn-link w-100">
                             Reset to defaults
@@ -324,6 +324,12 @@
                             <div class="row g-0">
                               <div class="col-auto">
                                 <div class="card-body">
+                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                </div>
+                              </div>
+                              <div class="col-auto">
+                                <div class="card-body">
+                                 
                                   <div class="avatar avatar-md" style="background-image: url(static/jobs/job-1.jpg)"></div>
                                 </div>
                               </div>
@@ -383,6 +389,11 @@
                           </div>
                           <div class="card">
                             <div class="row g-0">
+                              <div class="col-auto">
+                                <div class="card-body">
+                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                </div>
+                              </div>
                               <div class="col-auto">
                                 <div class="card-body">
                                   <div class="avatar avatar-md" style="background-image: url(static/jobs/job-2.png)"></div>
@@ -447,6 +458,11 @@
                             <div class="row g-0">
                               <div class="col-auto">
                                 <div class="card-body">
+                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                </div>
+                              </div>
+                              <div class="col-auto">
+                                <div class="card-body">
                                   <div class="avatar avatar-md" style="background-image: url(static/jobs/job-3.png)"></div>
                                 </div>
                               </div>
@@ -506,6 +522,11 @@
                           </div>
                           <div class="card">
                             <div class="row g-0">
+                              <div class="col-auto">
+                                <div class="card-body">
+                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                </div>
+                              </div>
                               <div class="col-auto">
                                 <div class="card-body">
                                   <div class="avatar avatar-md" style="background-image: url(static/jobs/job-4.png)"></div>
@@ -568,6 +589,11 @@
                             <div class="row g-0">
                               <div class="col-auto">
                                 <div class="card-body">
+                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                </div>
+                              </div>
+                              <div class="col-auto">
+                                <div class="card-body">
                                   <div class="avatar avatar-md" style="background-image: url(static/jobs/job-5.png)"></div>
                                 </div>
                               </div>
@@ -627,6 +653,11 @@
                           </div>
                           <div class="card">
                             <div class="row g-0">
+                              <div class="col-auto">
+                                <div class="card-body">
+                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                </div>
+                              </div>
                               <div class="col-auto">
                                 <div class="card-body">
                                   <div class="avatar avatar-md" style="background-image: url(static/jobs/job-6.png)"></div>
