add pathway completed

--- a/profilepage.html
+++ b/profilepage.html
@@ -39,9 +39,9 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <h1 class="navbar-brand navbar-brand-autodark">
-            <a href=".">
+           <!--<a href=".">
               <img src="static/logo-white.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
-            </a>
+            </a>-->
           </h1>
           <div class="navbar-nav flex-row d-lg-none">
             <div class="nav-item d-none d-lg-flex me-3">
@@ -262,14 +262,9 @@
                             Pathways
                           </h3>
                           <div class="card-actions">
-                            <a href="pathway-creation.html">
+                            <a href="pathway-creation.html" class="btn btn-primary ms-auto">
                               New<!-- Download SVG icon from http://tabler-icons.io/i/edit -->
-                              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-								<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-								<path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
-								<path d="M9 12l6 0"></path>
-								<path d="M12 9l0 6"></path>
-							 </svg>
+                              
 							</a>
                           </div>
                         </div>
