--- a/userslist.html
+++ b/userslist.html
@@ -39,9 +39,9 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <h1 class="navbar-brand navbar-brand-autodark">
-            <a href=".">
+           <!--<a href=".">
               <img src="static/logo-white.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
-            </a>
+            </a>-->
           </h1>
           <div class="navbar-nav flex-row d-lg-none">
             <div class="nav-item d-none d-lg-flex me-3">
