add pathway completed

--- a/pathway-creation.html
+++ b/pathway-creation.html
@@ -280,7 +280,7 @@
                             Suggested best pathway options
                           </h3>
                           <div class="card-actions">
-                            <a href="pathway-creation.html">
+                            <a href="pathway-confirmation.html">
                                 Select<!-- Download SVG icon from http://tabler-icons.io/i/edit -->
                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                   <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
