--- a/catalogue-select.html
+++ b/catalogue-select.html
@@ -334,6 +334,7 @@
                                 </div>
                               </div>
                               <div class="col">
+                                <div class="ribbon bg-yellow">Recommanded</div>
                                 <div class="card-body ps-0">
                                   <div class="row">
                                     <div class="col">
@@ -400,6 +401,7 @@
                                 </div>
                               </div>
                               <div class="col">
+                                <div class="ribbon bg-yellow">Recommanded</div>
                                 <div class="card-body ps-0">
                                   <div class="row">
                                     <div class="col">
