add pathway completed

--- a/catalogue-select.html
+++ b/catalogue-select.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Dashboard - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+    <title>NEC - Programmes</title>
     <!-- CSS files -->
     <link href="./dist/css/tabler.min.css?1669759017" rel="stylesheet"/>
     <link href="./dist/css/tabler-flags.min.css?1669759017" rel="stylesheet"/>
@@ -221,7 +221,12 @@
                   Overview
                 </div>
                 <h2 class="page-title">
-                  Catalogue
+                  <a href="pathway-creation.html"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-left" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M5 12l14 0"></path>
+                    <path d="M5 12l4 4"></path>
+                    <path d="M5 12l4 -4"></path>
+                   </svg></a>Catalogue
                 </h2>
               </div>
               <!-- Page title actions -->
@@ -324,7 +329,7 @@
                             <div class="row g-0">
                               <div class="col-auto">
                                 <div class="card-body">
-                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                  <input class="form-check-input m-0" type="checkbox">
                                 </div>
                               </div>
                               <div class="col-auto">
@@ -334,7 +339,7 @@
                                 </div>
                               </div>
                               <div class="col">
-                                <div class="ribbon bg-yellow">Recommanded</div>
+                                <div class="ribbon bg-yellow">Recommended</div>
                                 <div class="card-body ps-0">
                                   <div class="row">
                                     <div class="col">
@@ -392,7 +397,7 @@
                             <div class="row g-0">
                               <div class="col-auto">
                                 <div class="card-body">
-                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                  <input class="form-check-input m-0" type="checkbox">
                                 </div>
                               </div>
                               <div class="col-auto">
@@ -401,7 +406,7 @@
                                 </div>
                               </div>
                               <div class="col">
-                                <div class="ribbon bg-yellow">Recommanded</div>
+                                <div class="ribbon bg-yellow">Recommended</div>
                                 <div class="card-body ps-0">
                                   <div class="row">
                                     <div class="col">
@@ -460,7 +465,7 @@
                             <div class="row g-0">
                               <div class="col-auto">
                                 <div class="card-body">
-                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                  <input class="form-check-input m-0" type="checkbox">
                                 </div>
                               </div>
                               <div class="col-auto">
@@ -526,7 +531,7 @@
                             <div class="row g-0">
                               <div class="col-auto">
                                 <div class="card-body">
-                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                  <input class="form-check-input m-0" type="checkbox">
                                 </div>
                               </div>
                               <div class="col-auto">
@@ -591,7 +596,7 @@
                             <div class="row g-0">
                               <div class="col-auto">
                                 <div class="card-body">
-                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                  <input class="form-check-input m-0" type="checkbox">
                                 </div>
                               </div>
                               <div class="col-auto">
@@ -657,7 +662,7 @@
                             <div class="row g-0">
                               <div class="col-auto">
                                 <div class="card-body">
-                                  <input class="form-check-input m-0" type="checkbox" checked>
+                                  <input class="form-check-input m-0" type="checkbox">
                                 </div>
                               </div>
                               <div class="col-auto">
