--- a/pathway-completed-details.html
+++ b/pathway-completed-details.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Dashboard - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+    <title>NEC - Programmes</title>
     <!-- CSS files -->
     <link href="./dist/css/tabler.min.css?1669759017" rel="stylesheet"/>
     <link href="./dist/css/tabler-flags.min.css?1669759017" rel="stylesheet"/>
@@ -210,6 +210,12 @@
                   Overview
                 </div>
                 <h2 class="page-title">
+                  <a href="profilepage.html"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-left" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M5 12l14 0"></path>
+                    <path d="M5 12l4 4"></path>
+                    <path d="M5 12l4 -4"></path>
+                   </svg></a>
                   Pathway (01/03/2023)
                 </h2>
               </div>
@@ -512,8 +518,8 @@
                         </div>
                         <div class="card-body">
 							<div style="margin-bottom:20px">
-								<svg xmlns="http://www.w3.org/2000/svg" class="icon text-green" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 12l5 5l10 -10" /></svg>
-                      program1-certificate.doc
+								<a href="#"><svg xmlns="http://www.w3.org/2000/svg" class="icon text-green" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 12l5 5l10 -10" /></svg>
+                      program1-certificate.doc</a>
 							</div>
 							<form class="dropzone" id="dropzone-default" action="./" autocomplete="off" novalidate>
 								<div class="fallback">
