--- a/pathway-confirmation.html
+++ b/pathway-confirmation.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Dashboard - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+    <title>NEC - Programmes</title>
     <!-- CSS files -->
     <link href="./dist/css/tabler.min.css?1669759017" rel="stylesheet"/>
     <link href="./dist/css/tabler-flags.min.css?1669759017" rel="stylesheet"/>
@@ -206,7 +206,12 @@
               <div class="row g-2 align-items-center">
                 <div class="col">
                   <h2 class="page-title">
-                    New pathway confirmation
+                    <a href="catalogue-select.html"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-left" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+						<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+						<path d="M5 12l14 0"></path>
+						<path d="M5 12l4 4"></path>
+						<path d="M5 12l4 -4"></path>
+					 </svg></a>New pathway confirmation
                   </h2>
                 </div>
                 <!-- Page title actions -->
@@ -335,7 +340,7 @@
                 </div>
             </div>
             <div class="text-end" style="margin-top:15px">
-                <button type="button" class="btn btn-primary" onclick="javascript:window.print();">
+                <a class="btn btn-primary w-100" href="pathway-confirmed.html" type="button" class="btn btn-primary">
                     <!-- Download SVG icon from http://tabler-icons.io/i/printer -->
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-checklist" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -344,7 +349,7 @@
                         <path d="M9 8h4"></path>
                         <path d="M9 12h2"></path>
                      </svg>Confirm Contract
-                  </button>
+					</a>
             </div>
               </div>
             </div>
